@@ -1,11 +1,13 @@
 package gay.oss.gatos.core;
 
-import static com.mongodb.MongoClientSettings.getDefaultCodecRegistry;
-import static org.bson.codecs.configuration.CodecRegistries.fromProviders;
-import static org.bson.codecs.configuration.CodecRegistries.fromRegistries;
-
-import java.util.Arrays;
-
+import com.mongodb.ConnectionString;
+import com.mongodb.MongoClientSettings;
+import com.mongodb.client.MongoClient;
+import com.mongodb.client.MongoClients;
+import com.mongodb.client.MongoCollection;
+import com.mongodb.client.MongoDatabase;
+import gay.oss.gatos.core.models.Flow;
+import gay.oss.gatos.core.models.User;
 import org.bson.BsonDocument;
 import org.bson.BsonInt64;
 import org.bson.Document;
@@ -17,49 +19,52 @@ import org.bson.codecs.pojo.Conventions;
 import org.bson.codecs.pojo.PojoCodecProvider;
 import org.bson.conversions.Bson;
 
-import com.mongodb.ConnectionString;
-import com.mongodb.MongoClientSettings;
-import com.mongodb.client.MongoClient;
-import com.mongodb.client.MongoClients;
-import com.mongodb.client.MongoCollection;
-import com.mongodb.client.MongoDatabase;
+import java.util.List;
 
-import gay.oss.gatos.core.models.Flow;
-import gay.oss.gatos.core.models.User;
+import static com.mongodb.MongoClientSettings.getDefaultCodecRegistry;
+import static org.bson.codecs.configuration.CodecRegistries.fromProviders;
+import static org.bson.codecs.configuration.CodecRegistries.fromRegistries;
 
 /**
  * Singleton instance of the MongoDB client
  */
-public class Database {
-    private static Database INSTANCE = new Database();
-    private MongoClient client;
-    private CodecRegistry codecRegistry;
+public enum Database {
+
+    INSTANCE;
+
+    private final MongoClient client = createClient();
+    private final CodecRegistry codecRegistry = createRegistry();
 
     /**
      * Configure the MongoDB driver
      */
-    private Database() {
+    private static MongoClient createClient() {
+        // Configure the connection settings
+        ConnectionString connectionString = new ConnectionString(Environment.getMongoUri());
+        MongoClientSettings mongoClientSettings = MongoClientSettings.builder()
+            .uuidRepresentation(UuidRepresentation.STANDARD)
+            .applyConnectionString(connectionString).build();
+
+        // Build the client
+        return MongoClients.create(mongoClientSettings);
+    }
+
+    /**
+     * Configure the MongoDB driver
+     */
+    private static CodecRegistry createRegistry() {
         // Create ClassModel for every single model
         // Documentation:
         // https://www.mongodb.com/docs/drivers/java/sync/current/fundamentals/data-formats/pojo-customization/#customize-a-pojocodecprovider
         ClassModel<User> userModel = ClassModel.builder(User.class)
-                .conventions(Arrays.asList(Conventions.ANNOTATION_CONVENTION)).build();
+            .conventions(List.of(Conventions.ANNOTATION_CONVENTION)).build();
 
         ClassModel<Flow> flowModel = ClassModel.builder(Flow.class)
-                .conventions(Arrays.asList(Conventions.ANNOTATION_CONVENTION)).build();
+            .conventions(List.of(Conventions.ANNOTATION_CONVENTION)).build();
 
         // Register classes and create the registry
         CodecProvider pojoCodecProvider = PojoCodecProvider.builder().register(userModel, flowModel).build();
-        this.codecRegistry = fromRegistries(getDefaultCodecRegistry(), fromProviders(pojoCodecProvider));
-
-        // Configure the connection settings
-        ConnectionString connectionString = new ConnectionString(Environment.getMongoUri());
-        MongoClientSettings mongoClientSettings = MongoClientSettings.builder()
-                .uuidRepresentation(UuidRepresentation.STANDARD)
-                .applyConnectionString(connectionString).build();
-
-        // Build the client
-        this.client = MongoClients.create(mongoClientSettings);
+        return fromRegistries(getDefaultCodecRegistry(), fromProviders(pojoCodecProvider));
     }
 
     /**
@@ -73,7 +78,7 @@ public class Database {
 
     /**
      * Get the Mongo Database
-     * 
+     *
      * @return {@link MongoDatabase}
      */
     public static MongoDatabase getDatabase() {
@@ -82,7 +87,7 @@ public class Database {
 
     /**
      * Get a Mongo Collection by name
-     * 
+     *
      * @return {@link MongoCollection}
      */
     public static MongoCollection<Document> getCollection(String name) {
@@ -91,7 +96,7 @@ public class Database {
 
     /**
      * Get a Mongo Collection with POJO support by name and class
-     * 
+     *
      * @return {@link MongoCollection}
      */
     public static <TDocument> MongoCollection<TDocument> getCollection(String name, Class<TDocument> cls) {
